--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="output-area">
         <p id="num-urls"></p>
         <ul id="urls"></ul>
-        <button id="download-btn">Download All Videos</button>
+        <button id="download-btn">Download All Videos with set name</button>
+        <button id="download-btn-wsn">Download All Videos without set name</button>
     </div>
     <script src="app.js"></script>
 </body>
