--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Mdisk Downloader</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <button id="download-btn">Download All Videos with set name</button>
         <button id="download-btn-wsn">Download All Videos without set name</button>
     </div>
-    <script src="app.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
