--- a/about.html
+++ b/about.html
@@ -7,3 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<body>
+    <h1>Mdisk Downloader about page</h1>
+    <p>Here is some text about the page.</p>
+    <p>This is a paragraph.</p>
+    <p>This is another paragraph.</p>
+    <p>This is a third paragraph.</p>
+    <p>This is a fourth paragraph.</p>
+    <p>This is a fifth paragraph.</p>
+</body>
+
+</html>
